fix(component/navbar): nav toggler doesn't align with page margins

--- a/src/components/navbar/navbar.less
+++ b/src/components/navbar/navbar.less
@@ -94,7 +94,7 @@
   right: 0;
   z-index: 5;
 
-  padding: @spacing*8 @spacing*6;
+  padding: @spacing*8 0;
 
   background: transparent;
   border: none;
